typescript/checker/tests/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractManyKeywords.ts.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractManyKeywords.ts:3:9
  |
3 | default abstract class C {}
  |         ^^^^^^^^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractManyKeywords.ts:3:1
  |
3 | default abstract class C {}
  | ^^^^^^^

